--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
 <body>
   <h1>The Learn Enough Story</h1>
 
+  <p>
+      Learn Enough to Be Dangerous is a leader in the movement to teach
+      technical sophistication, the seemingly magical ability to take
+      command of your computer and get it to do your bidding. This includes
+      everything from command lines and coding to guessing keyboard shortcuts,
+      Googling error messages, and knowing when to just reboot the darn thing.
+      We believe there are <b>at least a billion people</b> who can benefit from
+      learning <em>technical sophistication</em>, probably more. To join our
+      movement, sign up for our official email list now.
+  </p>
+
   <h2>Background</h2>
 
   <h2>Founders</h2>
+
+  <p>
+      Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
+      Donahoe, and Nick Merwin. We believe that the kind of technical
+      sophistication taught by the Learn Enough tutorials can benefit
+      at least <em><strong>a billion people</strong></em>, and probably more.
+  </p>
 
   <h3>Michael Hartl</h3>
 
