Add a few new tags to tables

--- a/tags.html
+++ b/tags.html
@@ -61,6 +61,16 @@
         <td>table data</td>
         <td>include a table data cell</td>
       </tr>
+      <tr>
+      	<td><code>header</code></td>
+      	<td>header of a page</td>
+      	<td>include a heading for a whole page</td>
+      </tr>
+      <tr>
+      	<td><code>div</code></td>
+      	<td>division</td>
+      	<td>divides pages into sections</td>
+      </tr>
   </table>
 
   <h2>Inline Elements</h2>
@@ -110,6 +120,17 @@
           </code>
         </td>
         <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
+      </tr>
+      <tr>
+      	<td><code>span</code></td>
+      	<td>marked string of text</td>
+      	<td>mark text for later styling</td>
+      	<td>
+      		<code>
+      			&lt;span&gt;Call me Ishmael&lt;/span&gt;
+      		</code>
+      	</td>
+      	<td></td>
       </tr>
     </table>
 
