Add lists to Moby Dick page and related tags to Tags page

--- a/tags.html
+++ b/tags.html
@@ -71,6 +71,21 @@
       	<td>division</td>
       	<td>divides pages into sections</td>
       </tr>
+      <tr>
+      	<td><code>ol</code></td>
+      	<td>ordered list</td>
+      	<td>creates an ordered list</td>
+      </tr>
+      <tr>
+      	<td><code>ul</code></td>
+      	<td>unordered list</td>
+      	<td>creaes an unordered list</td>
+      </tr>
+      <tr>
+      	<td><code>il</code></td>
+      	<td>list item</td>
+      	<td>defines a list item</td>
+      </tr>
   </table>
 
   <h2>Inline Elements</h2>
