--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Learn Enough to Be Dangerous</title>
 	<meta charset="utf-8">
+	<style> a:visited {color: blue; !important} a {text-decoration: none;}</style>
 </head>
 <body>
 
-  <div>
+  <div style="text-align: right;">
     <a href="index.html">Home</a>
-    <a href="tags.html">HTML Tags</a>
-    <a href="moby_dick.html">Moby Dick</a>
+    <a href="tags.html" style="margin-left: 10px;">HTML Tags</a>
+    <a href="moby_dick.html" style="margin-left: 10px;">Moby Dick</a>
   </div>
   
   <h1>The Learn Enough Story</h1>
@@ -42,6 +43,21 @@
   </p>
 
   <img src="images/kitten.jpg" alt="A cute little kitten">
+
+  <h2>Quotations</h2>
+
+    <p>
+      In addition to hosting most of the world's supply of kitten videos, the
+      Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+
+    <blockquote style="padding: 2px 20px; background: #aaddff;">
+      <p>
+        <em>Don't believe every quote you read on the Internet.</em>
+        <br>
+        —Abraham Lincoln
+      </p>
+    </blockquote>
 
   <h2>Background</h2>
 
